--- a/index.html
+++ b/index.html
@@ -1,44 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Tip calculator app</title>
+		<link
+		rel="icon"
+		type="image/png"
+		sizes="32x32"
+		href="./images/favicon-32x32.png"
+		/>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+		<title>Frontend Mentor | Tip calculator app</title>
+		<!-- CSS -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+		<link href="./styles.css" rel="stylesheet" />
+		<!-- Fonts -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>	
+		<link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;500;700&display=swap" rel="stylesheet">
+	</head>
 
-  Bill
-
-  Select Tip %
-  5%
-  10%
-  15%
-  25%
-  50%
-  Custom
-
-  Number of People
-
-  Tip Amount
-  / person
-
-  Total
-  / person
-
-  Reset
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+	<body>
+		<header>
+			<h1 class="text-uppercase text-center mb-0">Spli<br>tter</h1>
+		</header>
+		<main class="p-3">
+			<label for="bill">Bill</label>
+			<input type="number" class="form-control" id="bill">
+			<label for="select_tip">Select Tip %</label>
+			<input type="radio" class="btn-check" name="tip_options" id="five_percent">
+			<label class="btn btn-secondary" for="five_percent">5%</label>
+			<input type="radio" class="btn-check" name="tip_options" id="ten_percent">
+			<label class="btn btn-secondary" for="ten_percent">10%</label>
+			<input type="radio" class="btn-check" name="tip_options" id="fifteen_percent">
+			<label class="btn btn-secondary" for="fifteen_percent">15%</label>
+			<input type="radio" class="btn-check" name="tip_options" id="twenty_five_percent">
+			<label class="btn btn-secondary" for="twenty_five_percent">25%</label>
+			<input type="radio" class="btn-check" name="tip_options" id="fifty_percent">
+			<label class="btn btn-secondary" for="fifty_percent">50%</label>
+			<input type="text" class="form-control" name="tip_options" id="custom_tip" placeholder="Custom">
+			<label class="visually-hidden" for="custom_tip">Custom</label>
+			<label for="number_of_people">Number of People</label>
+			<input type="text" class="form-control" id="number_of_people">
+			<article class="p-4">
+				<table class="w-100">
+					<tbody>
+						<tr>
+							<td>Tip Amount<br><span>/ person</span></td>
+							<td class="dollar_amount">$4.27</td>
+						</tr>
+						<tr>
+							<td>Total<br><span>/ person</span></td>
+							<td class="dollar_amount">$32.79</td>
+						</tr>
+					</tbody>
+				</table>
+				<div class="d-grid">
+					<button type="reset" class="btn resetBtn btn-lg text-uppercase" id="reset">Reset</button>
+				</div>
+			</article>
+		</main>
+		<footer class="fixed-bottom pb-3">
+			<div class="attribution">
+			Challenge by
+			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+				>Frontend Mentor</a
+			>. Coded by <a href="#">Emily van Akker</a>.
+			</div>
+		</footer>
+		<!-- JavaScript Bundle with Popper -->
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	</body>
 </html>
