--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
 		</header>
 		<main class="p-3">
 			<label for="bill">Bill</label>
-			<input type="number" class="form-control" id="bill">
+			<input type="text" class="form-control" id="bill">
 			<label for="select_tip">Select Tip %</label>
 			<input type="radio" class="btn-check" name="tip_options" id="five_percent">
-			<label class="btn btn-secondary" for="five_percent">5%</label>
+			<label class="btn radioBtn" for="five_percent">5%</label>
 			<input type="radio" class="btn-check" name="tip_options" id="ten_percent">
-			<label class="btn btn-secondary" for="ten_percent">10%</label>
-			<input type="radio" class="btn-check" name="tip_options" id="fifteen_percent">
-			<label class="btn btn-secondary" for="fifteen_percent">15%</label>
+			<label class="btn radioBtn" for="ten_percent">10%</label>
+			<input type="radio" class="btn-check" name="tip_options" id="fifteen_percent" checked>
+			<label class="btn radioBtn" for="fifteen_percent">15%</label>
 			<input type="radio" class="btn-check" name="tip_options" id="twenty_five_percent">
-			<label class="btn btn-secondary" for="twenty_five_percent">25%</label>
+			<label class="btn radioBtn" for="twenty_five_percent">25%</label>
 			<input type="radio" class="btn-check" name="tip_options" id="fifty_percent">
-			<label class="btn btn-secondary" for="fifty_percent">50%</label>
+			<label class="btn radioBtn" for="fifty_percent">50%</label>
 			<input type="text" class="form-control" name="tip_options" id="custom_tip" placeholder="Custom">
 			<label class="visually-hidden" for="custom_tip">Custom</label>
 			<label for="number_of_people">Number of People</label>
-			<input type="text" class="form-control" id="number_of_people">
+			<input type="text" class="form-control mb-3" id="number_of_people">
 			<article class="p-4">
 				<table class="w-100">
 					<tbody>
